# my-mcp-server

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/commands/: new-project.md
.claude/hooks/: protect-env.js
server/: Cargo.toml
server/src/: app.rs  main.rs
