[workspace]
resolver = "2"
members = ["server"]

# Shared dependencies — use `.workspace = true` in member Cargo.toml
[workspace.dependencies]
# Leptos stack
leptos = { version = "0.8" }
leptos_axum = { version = "0.8" }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8" }

# Web framework
axum = { version = "0.8" }
tokio = { version = "1", features = ["rt-multi-thread"] }

# WASM
wasm-bindgen = { version = "0.2" }
console_error_panic_hook = { version = "0.1" }

# Error handling
anyhow = { version = "1" }
thiserror = { version = "2" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }

# Logging
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Size-optimized profile for WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
